--- a/GhostHost/index.html
+++ b/GhostHost/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Ghost Host Homepage</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick-theme.css"/>
 </head>
 
 <body>
@@ -16,25 +19,25 @@
         </div>
         <div class="top">
             <div class="container">
-                <div class="logo"><img src="pic/GhostHostLogo.png" alt="GhostHostLogo" class="logo-pic"></div>
+                <a href=""><div class="logo"><img src="pic/GhostHostLogo.png" alt="GhostHostLogo" class="logo-pic"></div></a>
                 <div class="small-screen-menu">
                 	<img src="pic/smallScreenMenuButton.png" class="menu-button">
                 	<div class="wrapped-menu-container">              <!--HIDDEN MENU, VISIBLE ONLY ON MOBILE DEVICES-->
-                		<div>Home</div>
-                		<div>Domain</div>
-                		<div>Hosting</div>
-                		<div>Clients</div>
-               			<div>Blog</div>
-                		<div>Support</div>
+                		<div><a href="">Home</a></div>
+                		<div><a href="">Domain</a></div>
+                		<div><a href="">Hosting</a></div>
+                		<div><a href="">Clients</a></div>
+               			<div><a href="">Blog</a></div>
+                		<div><a href="">Support</a></div>
                 	</div>
             	</div>
                 <div class="top-menu-container">                      <!--MENU VISIBLE ON TABLETS AND PC'S-->
-                	<div>Home</div>
-                	<div>Domain</div>
-                	<div>Hosting</div>
-                	<div>Clients</div>
-               		<div>Blog</div>
-                	<div>Support</div>
+                	<div><a href="">Home</a></div>
+                	<div><a href="">Domain</a></div>
+                	<div><a href="">Hosting</a></div>
+                	<div><a href="">Clients</a></div>
+               		<div><a href="">Blog</a></div>
+                	<div><a href="">Support</a></div>
             	</div>
             </div>
         </div>
@@ -42,10 +45,10 @@
 <!--THE LOGIN & REGISTER SECTION-->
     <section class="sign-in">
     	<div class="login">
-    		<h4>LOGIN</h4>
+    		<a href=""><h4>LOGIN</h4></a>
     	</div>
     	<div class="register">
-    		<h4>REGISTER</h4>
+    		<a href=""><h4>REGISTER</h4></a>
        	</div>
     </section>
 <!--DOMAIN NAME CHOICE SECTION-->
@@ -89,19 +92,22 @@
     </section>
 <!--PACKAGE SELECTION SECTION-->
     <section class="packages">
-        <div class="packages-background">
+         <div class="packages-background">
             <img src="pic/backgrounds/packagesBackground.jpg" class="backgroundimage">
         </div>
         <div class="packages-whitespace"></div>
         <div class="packages-plan">
             <div>
                 <table class="package-table">
+                    <thead>
                     <tr>
                         <td colspan="2">
                             <img src="pic/packages/basicPackage.png">
                             <h3>BASIC PACKAGE</h3>
                         </td>
                     </tr>
+                    </thead>
+                    <tbody>
                     <tr>
                         <td>Disk Space (GB)</td>
                         <td>50</td>
@@ -128,19 +134,28 @@
                     <tr>
                         <td colspan="2">Free Support</td>
                     </tr>
-                    <tr>
-                        <td colspan="2"></td>
-                    </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="2">
+                                <h2><sup>$</sup><span class="price">15</span><sub>/Mo</sub></h2>
+                                <a href=""><input type="button" name="select-plan" id="select-plan" value="SELECT PLAN"></a>
+                            </td>
+                        </tr>
+                    </tfoot>
                 </table>
             </div>
             <div>
                 <table class="package-table">
+                    <thead>
                     <tr>
                         <td colspan="2">
                             <img src="pic/packages/normalPackage.png">
                             <h3>NORMAL PACKAGE</h3>
                         </td>
                     </tr>
+                    </thead>
+                    <tbody>
                     <tr>
                         <td>Disk Space (GB)</td>
                         <td>100</td>
@@ -167,19 +182,28 @@
                     <tr>
                         <td colspan="2">Free Support</td>
                     </tr>
-                    <tr>
-                        <td colspan="2"></td>
-                    </tr>
+                </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="2">
+                                <h2><sup>$</sup><span class="price">30</span><sub>/Mo</sub></h2>
+                                <a href=""><input type="button" name="select-plan" id="select-plan" value="SELECT PLAN"></a>
+                            </td>
+                        </tr>
+                    </tfoot>
                 </table>
             </div>
             <div>
                 <table class="package-table">
+                    <thead>
                     <tr>
                         <td colspan="2">
                             <img src="pic/packages/bigPackage.png">
                             <h3>BIG PACKAGE</h3>
                         </td>
                     </tr>
+                    </thead>
+                    <tbody>
                     <tr>
                         <td>Disk Space (GB)</td>
                         <td>150</td>
@@ -206,19 +230,28 @@
                     <tr>
                         <td colspan="2">Free Support</td>
                     </tr>
-                    <tr>
-                        <td colspan="2"></td>
-                    </tr>
+                </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="2">
+                                <h2><sup>$</sup><span class="price">40</span><sub>/Mo</sub></h2>
+                                <a href=""><input type="button" name="select-plan" id="select-plan" value="SELECT PLAN"></a>
+                            </td>
+                        </tr>
+                    </tfoot>
                 </table>
             </div>
             <div>
                 <table class="package-table">
+                    <thead>
                     <tr>
                         <td colspan="2">
                             <img src="pic/packages/biggestPackage.png">
                             <h3>BIGGEST PACKAGE</h3>
                         </td>
                     </tr>
+                    </thead>
+                    <tbody>
                     <tr>
                         <td>Disk Space (GB)</td>
                         <td>250</td>
@@ -245,15 +278,130 @@
                     <tr>
                         <td colspan="2">Free Support</td>
                     </tr>
-                    <tr>
-                        <td colspan="2"></td>
-                    </tr>
+                </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="2">
+                                <h2><sup>$</sup><span class="price">70</span><sub>/Mo</sub></h2>
+                                <a href=""><input type="button" name="select-plan" id="select-plan" value="SELECT PLAN"></a>
+                            </td>
+                        </tr>
+                    </tfoot>
                 </table>
             </div>
         </div>
     </section>
-
+<!--ABOUT US SECTION-->
+    <section class="about">
+        <div class="about-container">
+            <div class="about-us-text">
+                <h2><b>About</b> Us</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi. </p>
+            </div>
+            <div class="our-team">
+                <div class="team-member">
+                    <div class="member-photo"><img src="pic/doe/JonnyDoe.png"></div>
+                    <div class="member-name">Jonny Doe<br><span>Designer</span></div>
+                    <div class="social-icons">
+                        <a href=""><i class="fab fa-facebook-f"></i></a>
+                        <a href=""><i class="fab fa-twitter"></i></a>
+                        <a href=""><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="member-photo"><img src="pic/doe/JohnDoe.png"></div>
+                    <div class="member-name">John Doe<br><span>Designer</span></div>
+                    <div class="social-icons">
+                        <a href=""><i class="fab fa-facebook-f"></i></a>
+                        <a href=""><i class="fab fa-twitter"></i></a>
+                        <a href=""><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="member-photo"><img src="pic/doe/JohnathanDoe.png"></div>
+                    <div class="member-name">Johnathan Doe<br><span>Designer</span></div>
+                    <div class="social-icons">
+                        <a href=""><i class="fab fa-facebook-f"></i></a>
+                        <a href=""><i class="fab fa-twitter"></i></a>
+                        <a href=""><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--COMMNTS SECTION (WITH ANIMATION PROBABLY IDK YET I STARTED MAKING THIS SECTION HALF AN HOUR AGO AND JUST AFTER THE START WENT TO WATCH YOUTUBE I'M SO SO SO SORRY I CAN FEEL THE COMING OF MARKUP TASK DEADLINE BY MY SKIN LITERALLY BUT I'M JUST SITTING IN MY ROOM DOIND STUPID THINGS LIKE WRITING THIS TEXT OKAY I NEED TO MAKE MYSELF DO WHAT I NEED TO DO BYYYYYEEEEEE)-->
+    <section class="comments">
+        <div class="comments-container slider">
+            <div class="item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.<br><span>John Doe</span></div>
+            <div class="item">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br><span>Jonny Doe</span></div>
+            <div class="item">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><span>Johnathan Doe</span></div>
+        </div>
+        <div class="comments-background"><img src="pic/backgrounds/commentsBackground.jpg" class="backgroundimage"></div>
+    </section>
+<!--FUNCTIONS SECTION.............-->
+    <section class="functions"> 
+        <div class="functions-container">
+            <div class="func-item">
+                <img src="pic/functions/fastServers.png">
+                <h4>Fast Servers</h4>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+            </div>
+            <div class="func-item">
+                <img src="pic/functions/cloudServers.png">
+                <h4>Cloud Servers</h4>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+            </div>
+            <div class="func-item">
+                <img src="pic/functions/domainTransfer.png">
+                <h4>Domain Transfer</h4>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+            </div>
+            <div class="func-item">
+                <img src="pic/functions/liveSupport.png">
+                <h4>Live Support</h4>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
+            </div>
+        </div>
+    </section>
+<!--ALMOST DONE YAY-->
     <footer>
+        <div class="footer-navig footer-style">
+            <div class="logo"><img src="pic/GhostHostLogo.png" alt="GhostHostLogo" class="logo-pic"></div>
+            <div class="top-menu-container footer-menu">
+                <div><a href="">HOME</a></div>
+                <div><a href="">ABOUT US</a></div>
+                <div><a href="">BLOG</a></div>
+                <div><a href="">POLICY</a></div>
+                <div><a href="">CONTACT</a></div>
+            </div>
+        </div>
+        <div class="footer-container footer-style">
+            <div class="design-by">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.<br><span>Design by <b>Mert Can Eyrlyer</b></span></div>
+            <div class="nav-list">
+                <ul>
+                    <a href=""><li>Support</li></a>
+                    <a href=""><li>Account</li></a>
+                    <a href=""><li>Product Catalog</li></a>
+                    <a href=""><li>Shortcodes</li></a>
+                    <a href=""><li>Site Map</li></a>
+                    <a href=""><li>Whois Search</li></a>
+                    <a href=""><li>Web Mail</li></a>
+                    <a href=""><li>Find Domain</li></a>
+                </ul>
+            </div>
+            <div class="contacts">
+                <i class="fas fa-phone"></i> 0000-0000-0000<br>
+                <i class="fas fa-envelope"></i> infoteam@ghosthost.com<br>
+                Lorem Ipsum Street, Lorem Avenue,<br>
+                Lorem Ipsum
+            </div>
+        </div>
     </footer>
 
+
+    
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>  
+    <script src="script.js"></script>
 </body>
