fix: login & register buttons fixed

--- a/GhostHost/index.html
+++ b/GhostHost/index.html
@@ -44,12 +44,12 @@
     </header>
 <!--THE LOGIN & REGISTER SECTION-->
     <section class="sign-in">
-    	<div class="login">
-    		<a href=""><h4>LOGIN</h4></a>
-    	</div>
-    	<div class="register">
-    		<a href=""><h4>REGISTER</h4></a>
-       	</div>
+    	<a href="" class="login"><div>
+    		<h4>LOGIN</h4>
+    	</div></a>
+    	<a href="" class="register"><div>
+    		<h4>REGISTER</h4>
+       	</div></a>
     </section>
 <!--DOMAIN NAME CHOICE SECTION-->
     <section class="new-domain">
@@ -329,7 +329,7 @@
             </div>
         </div>
     </section>
-<!--COMMNTS SECTION (WITH ANIMATION PROBABLY IDK YET I STARTED MAKING THIS SECTION HALF AN HOUR AGO AND JUST AFTER THE START WENT TO WATCH YOUTUBE I'M SO SO SO SORRY I CAN FEEL THE COMING OF MARKUP TASK DEADLINE BY MY SKIN LITERALLY BUT I'M JUST SITTING IN MY ROOM DOIND STUPID THINGS LIKE WRITING THIS TEXT OKAY I NEED TO MAKE MYSELF DO WHAT I NEED TO DO BYYYYYEEEEEE)-->
+<!--COMMENTS SECTION (WITH ANIMATION PROBABLY IDK YET I STARTED MAKING THIS SECTION HALF AN HOUR AGO AND JUST AFTER THE START WENT TO WATCH YOUTUBE I'M SO SO SO SORRY I CAN FEEL THE COMING OF MARKUP TASK DEADLINE BY MY SKIN LITERALLY BUT I'M JUST SITTING IN MY ROOM DOIND STUPID THINGS LIKE WRITING THIS TEXT OKAY I NEED TO MAKE MYSELF DO WHAT I NEED TO DO BYYYYYEEEEEE)-->
     <section class="comments">
         <div class="comments-container slider">
             <div class="item">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.<br><span>John Doe</span></div>
